--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	<div class="dropdown">
 		<a href='' class="dropbtn">Articles</a>
   <div class="dropdown-content" style='line-height: 1.6;'>
+	 <a href="mapSharedMailbox.html" class=two>Cannot map new Shared Mailboxes in O365</a><br>
+	  <a href="missingMailbox.html" class=two>Mailbox present in O365 but missing on-prem</a>
 	<a href="recreatePublicFolder.html" class=two>Recreating Public Folders in Exchange Online</a><br>
 	<a href="exchangeCertRenew.html" class=two>Renewing an Exchange 2016 certificate</a><br>
 	<a href="compliancePowershell.html" class=two>Connect to Compliance PowerShell behind a Proxy</a><br>
@@ -101,6 +103,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	      
 	      <div class=headline>Articles</div>
 	      <table class=indexTable> 
+	<tr><td><a href="mapSharedMailbox.html" class=two>Cannot map new Shared Mailboxes in O365</a></td><td>06-Dec-23</td></tr>
 	<tr><td><a href="missingMailbox.html" class=two>Mailbox present in O365 but missing on-prem</a></td><td>13-Nov-23</td></tr>
 	<tr><td><a href="recreatePublicFolder.html" class=two>Recreating Public Folders in Exchange Online</a></td><td>11-Oct-23</td></tr>
 	<tr><td><a href="exchangeCertRenew.html" class=two>Renewing an Exchange 2016 certificate</a></td><td>23-Jun-23</td></tr>
