--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 		<a href='' class="dropbtn">Articles</a>
   <div class="dropdown-content" style='line-height: 1.6;'>
 	 <a href="mapSharedMailbox.html" class=two>Cannot map new Shared Mailboxes in O365</a><br>
-	  <a href="missingMailbox.html" class=two>Mailbox present in O365 but missing on-prem</a>
+	  <a href="missingMailbox.html" class=two>Mailbox present in O365 but missing on-prem</a><br>
 	<a href="recreatePublicFolder.html" class=two>Recreating Public Folders in Exchange Online</a><br>
 	<a href="exchangeCertRenew.html" class=two>Renewing an Exchange 2016 certificate</a><br>
 	<a href="compliancePowershell.html" class=two>Connect to Compliance PowerShell behind a Proxy</a><br>
