--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	<div class="dropdown">
 		<a href='' class="dropbtn">Articles</a>
   <div class="dropdown-content" style='line-height: 1.6;'>
+	   <a href="teamsApplication.html" class=two>Teams PowerShell module cannot run CS commands as app</a><br>
 	 <a href="mapSharedMailbox.html" class=two>Cannot map new Shared Mailboxes in O365</a><br>
 	  <a href="missingMailbox.html" class=two>Mailbox present in O365 but missing on-prem</a><br>
 	<a href="recreatePublicFolder.html" class=two>Recreating Public Folders in Exchange Online</a><br>
