--- a/teamsApplication.html
+++ b/teamsApplication.html
@@ -74,6 +74,9 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	<div class="dropdown">
 		<a href='' class="dropbtn">Articles</a>
   <div class="dropdown-content" style='line-height: 1.6;'>
+	  2024<br>
+	  <a href="teamsApplication.html" class=two>Teams PowerShell module cannot run CS commands as App</a><br>
+	  2023<br>
   <a href="mapSharedMailbox.html" class=two>Cannot map new Shared Mailboxes in O365</a><br>
 	<a href="exchangeCertRenew.html" class=two>Renewing an Exchange 2016 certificate</a><br>
 	<a href="compliancePowershell.html" class=two>Connect to Compliance PowerShell behind a Proxy</a><br>
