--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 		<a href='' class="dropbtn">Articles</a>
   <div class="dropdown-content" style='line-height: 1.6;'>
 	  <b>2024</b><br>
-	  <a href="teamsApplication.html" class=two>Teams PowerShell module can't run CS commands as App</a><br>
+	  <a href="teamsApplication.html" class=two>Teams PowerShell module can't run CS cmd as App</a><br>
 	  <b>2023</b><br>
 	 <a href="mapSharedMailbox.html" class=two>Cannot map new Shared Mailboxes in O365</a><br>
 	  <a href="missingMailbox.html" class=two>Mailbox present in O365 but missing on-prem</a><br>
