--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	      
 	      <div class=headline>Articles</div>
 	      <table class=indexTable> 
+		      <a href="teamsApplication.html" class=two>Teams PowerShell module can't run CS cmd as App</a><br>
 	<tr><td><a href="mapSharedMailbox.html" class=two>Cannot map new Shared Mailboxes in O365</a></td><td>06-Dec-23</td></tr>
 	<tr><td><a href="missingMailbox.html" class=two>Mailbox present in O365 but missing on-prem</a></td><td>13-Nov-23</td></tr>
 	<tr><td><a href="recreatePublicFolder.html" class=two>Recreating Public Folders in Exchange Online</a></td><td>11-Oct-23</td></tr>
