--- a/teamsApplication.html
+++ b/teamsApplication.html
@@ -74,9 +74,9 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	<div class="dropdown">
 		<a href='' class="dropbtn">Articles</a>
   <div class="dropdown-content" style='line-height: 1.6;'>
-	  2024<br>
-	  <a href="teamsApplication.html" class=two>Teams PowerShell module can't run CS commands as App</a><br>
-	  2023<br>
+	  <b>2024</b><br>
+	  <a href="teamsApplication.html" class=two>Teams PowerShell module can't run CS cmd as App</a><br>
+	  <b>2023</b><br>
   <a href="mapSharedMailbox.html" class=two>Cannot map new Shared Mailboxes in O365</a><br>
 	<a href="exchangeCertRenew.html" class=two>Renewing an Exchange 2016 certificate</a><br>
 	<a href="compliancePowershell.html" class=two>Connect to Compliance PowerShell behind a Proxy</a><br>
@@ -113,6 +113,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
         <div class=content><br>
    A request from our Telecoms team asked if we could sync the phone number of newly ported users from Teams to AD as part of a scheduled task. The command worked without issue with the Teams Admin role enabled but when running the command Get-CsOnlineUser as an Azure app we got the following error.
 <br>
+		<br>
 		<div class=code>Get-CsOnlineUser: Access Denied.</div>
 		<br>
 Going by the Microsoft <a href='https://learn.microsoft.com/en-us/microsoftteams/teams-powershell-application-authentication#cmdlets-supported'>documentation</a>a> the app should work as long as the API permission <b>Organization.Read.All</b> is added.<br>
