--- a/teamsApplication.html
+++ b/teamsApplication.html
@@ -116,7 +116,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 		<br>
 		<div class=code>Get-CsOnlineUser: Access Denied.</div>
 		<br>
-Going by the Microsoft <a href='https://learn.microsoft.com/en-us/microsoftteams/teams-powershell-application-authentication#cmdlets-supported'>documentation</a>a> the app should work as long as the API permission <b>Organization.Read.All</b> is added.<br>
+Going by the Microsoft <a href='https://learn.microsoft.com/en-us/microsoftteams/teams-powershell-application-authentication#cmdlets-supported'>documentation</a> the app should work as long as the API permission <b>Organization.Read.All</b> is added.<br>
 		<br>
 		I'm currently looking for a fix to this issue.<br>
 <br>
