--- a/teamsApplication.html
+++ b/teamsApplication.html
@@ -116,9 +116,9 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 		<br>
 		<div class=code>Get-CsOnlineUser: Access Denied.</div>
 		<br>
-Going by the Microsoft <a href='https://learn.microsoft.com/en-us/microsoftteams/teams-powershell-application-authentication#cmdlets-supported'>documentation</a> the app should work as long as the API permission <b>Organization.Read.All</b> is added.<br>
+The fix is to give the application the Skype for Business admin role in Azure/Entra ID. The app can be added to the role via the GUI, just copy the App ID and then search for that when adding a role member.<br>
 		<br>
-		I'm currently looking for a fix to this issue.<br>
+		<img src='teamsApplication01.png' class=ImageMain>
 <br>
        		  <br>
 		
