--- a/teamsApplication.html
+++ b/teamsApplication.html
@@ -119,6 +119,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 The fix is to give the application the Skype for Business admin role in Azure/Entra ID. The app can be added to the role via the GUI, just copy the App ID and then search for that when adding a role member.<br>
 		<br>
 		<img src='teamsApplication01.png' class=ImageMain>
+		<div class=ImageCaption>↑ Above we have both an Azure app and a Managed Identity added to the Skype for Business admin role.</div>
 <br>
        		  <br>
 		
