--- a/outlookFolders.html
+++ b/outlookFolders.html
@@ -75,7 +75,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 		<a href='' class="dropbtn">Articles</a>
   <div class="dropdown-content" style='line-height: 1.6;'>
 	  <b>2024</b><br>
-    <a href="outlookFolders.html" class=two>Outlook folders keep moving sort order</a>
+    <a href="outlookFolders.html" class=two>Outlook folders keep moving sort order</a><br>
     <a href="runbooks.html" class=two>Teams report uploading to SharePoint with Runbooks</a><br>
 	  <a href="teamsApplication.html" class=two>Teams PowerShell module can't run CS cmd as App</a><br>
 	  <b>2023</b><br>
