--- a/setLocale.html
+++ b/setLocale.html
@@ -80,6 +80,16 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	<div class="dropdown">
 		<a href='' class="dropbtn">Articles</a>
   <div class="dropdown-content" style='line-height: 1.6;'>
+		  <b>2024</b><br>
+    <a href="outlookFolders.html" class=two>Outlook folders keep moving sort order</a><br>
+    <a href="runbooks.html" class=two>Teams report uploading to SharePoint with Runbooks</a><br>
+	  <a href="teamsApplication.html" class=two>Teams PowerShell module can't run CS cmd as App</a><br>
+	  <b>2023</b><br>
+  <a href="mapSharedMailbox.html" class=two>Cannot map new Shared Mailboxes in O365</a><br>
+	<a href="exchangeCertRenew.html" class=two>Renewing an Exchange 2016 certificate</a><br>
+	<a href="compliancePowershell.html" class=two>Connect to Compliance PowerShell behind a Proxy</a><br>
+	<a href="sensitivityLabelError.html" class=two>Sensitivity Label not shown in Outlook Client</a><br>
+	<a href="roomFinderError.html" class=two>Room Finder Error in Outlook</a><br>
 	<a href="teamsRoom.html" class=two>Teams not showing Rooms</a><br>
 	<a href="teamsFile.html" class=two>Teams unable to open file</a><br>
 	<a href="reviewQuarantine.html" class=two>Unable to review quarantined mails for shared mailbox</a><br>
@@ -87,8 +97,8 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	<a href="delegateSentItems.html" class=two>Delegate Sent Items placed into external Tenant</a><br>
 	<a href="microsoftSupport.html" class=two>Overview of Microsoft Support cases</a><br>
 	<a href="centralizedMail.html" class=two>When centralized mail sends via O365</a><br>
-  	<a href="DNScleanup.html" class=two>Cleaning up your Windows DNS server</a><br>
-  	<a href="oneDriveLocale.html" class=two>Set OneDrive for Business Locale</a><br>
+        <a href="DNScleanup.html" class=two>Cleaning up your Windows DNS server</a><br>
+        <a href="oneDriveLocale.html" class=two>Set OneDrive for Business Locale</a><br>
 	<a href="o365migration.html" class=two>O365 Migration Tips</a><br>
 	<a href="o365reporting.html" class=two>Reporting on successful Azure logons</a><br>
 	<a href="iisQueue.html" class=two>IIS Mapi Queue full with NetScaler</a><br>
