--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 		<a href='' class="dropbtn">Articles</a>
   <div class="dropdown-content" style='line-height: 1.6;'>
 	  <b>2024</b><br>
+	  <a href="desktopNotifications.html" class=two>Outlook Desktop Notifications stop working</a><br>
 	  <a href="outlookFolders.html" class=two>Outlook folders keep moving sort order</a><br>
 	  <a href="runbooks.html" class=two>Teams report uploading to SharePoint with Runbooks</a><br>
 	  <a href="teamsApplication.html" class=two>Teams PowerShell module can't run CS cmd as App</a><br>
@@ -107,6 +108,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	      
 	      <div class=headline>Articles</div>
 	      <table class=indexTable> 
+	<tr><td><a href="desktopNotifications.html" class=two>Outlook Desktop Notifications stop working</a></td><td>01-Feb-24</td></tr>
 	<tr><td><a href="outlookFolders.html" class=two>Outlook folders keep moving sort order</a><br></td><td>31-Jan-24</td></tr>
 	<tr><td><a href="runbooks.html" class=two>Creating a Teams report uploading to SharePoint with Runbooks</a><br></td><td>31-Jan-24</td></tr>
 	<tr><td><a href="teamsApplication.html" class=two>Teams PowerShell module can't run CS cmd as App</a></td><td>19-Jan-24</td></tr>
