--- a/desktopNotifications.html
+++ b/desktopNotifications.html
@@ -122,6 +122,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
         - Created a blank Inbox rule.<br>
         - Went to check 'Action Center' - 'Focus Assist' was turned off, but option was not available in Citrix. Right click 'Action Center' in System Tray to check.<br>
 	- Reset view on Inbox folder.<br>
+	- Run Outlook in safe mode.<br>
 	<br>
 	
           </div>
