--- a/desktopNotifications.html
+++ b/desktopNotifications.html
@@ -123,6 +123,8 @@ a.two:hover {color: #447EAE; text-decoration: none;}
         - Went to check 'Action Center' - 'Focus Assist' was turned off, but option was not available in Citrix. Right click 'Action Center' in System Tray to check.<br>
 	- Reset view on Inbox folder.<br>
 	- Run Outlook in safe mode.<br>
+	- Run Outlook with /cleanViews switch.<br>
+	- Checked for registry keys under: HKEY_CURRENT_USER\Software\Microsoft\Office\16.0\Outlook\Preferences . There were no keys present that would cause the issue.<br>
 	<br>
 	
           </div>
