--- a/outlookFolders.html
+++ b/outlookFolders.html
@@ -120,11 +120,11 @@ a.two:hover {color: #447EAE; text-decoration: none;}
           - The users had created a number of top-level folders and created directory structures underneath that.<br>
           - Over 30 people had access to the mailbox, which is over the Microsoft limit of 25.<br>
           <br>
-          A user fixed these problems, other than having many top level folders. Despite this though the issue remained. I then asked the user to try the following:<br>
+          A user fixed these problems, other than having many top level folders. Despite this though the issue remained, I then asked the user to try the following:<br>
           - Move one of the top level folders up (which is found when you right click on a folder).<br>
           - Open one of the top level folders in a a new window (again found by right clicking the folder).<br>
         <br>
-          This seemed to work temporarily, but the issue returned a few minutes later. At this point I have decided to log a support call with Microsoft to see what they have to say.<br>
+         After this the folder sort order was fixed.<br>
        		  <br>
 		
           </div>
