--- a/DINtimer.html
+++ b/DINtimer.html
@@ -115,6 +115,9 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	      <div class=datestamp>08-Feb-24</div>
         <div class=content><br>
 In November 2023 I finally got a Smart Meter installed by ESB Networks. This allowed me to available of a special night rate between the hours of 2 and 4 AM from my electricity provider, Electric Ireland.<br>
+		<br>
+		<img src=DINtimer01.png class=ImageMain>
+		<div class=ImageCaption>↑ Smart Meter to about 30 minutes to install.</div>
         <br>
         With a madman in the East the eletricity rates for the winter were at record levels:<br>
           - Day rate (09:00 to 23:00) 0.416 /kWh<br>
@@ -124,12 +127,21 @@ In November 2023 I finally got a Smart Meter installed by ESB Networks. This all
           Most of my heating comes from 3 storage heaters, 2 of which also have a manual top up heating element, Dimplex xmc718n. Despite their reputation I don't actually mind having sotrage heaters as you can warm them up during night rates and they are non polluting.<br>
           <br>
           My main issue was the automatic timer that regulates when they come on, the Devireg 710-2. The idea behind this is the controller will detect when the night rate will start and base how long it runs on the outside temperature. Great in thoery, in practice not so much.<br>
-          <br>
+          		<br>
+		<img src=DINtimer02.png class=ImageMain>
+		<div class=ImageCaption>↑ Devireg 710-2, commonly used in apartments.</div>
+		<br>
           My apartment is not well insulated so I always have to use the manual element in the evenings at the top rate. It also has no way to detect when the special night rate is, so I was paying almost twice as much as I could have been and with little control over long the heaters would run.<br>
           <br>
           Having weighed up the costs, I decided it made sense to replace the Devireg with a digital timer and get a qualified electrician to install it. Total cost was €152 (€136 for electrician, €16 for timer), so it should pay for itself in under 1 year (probable saving of €1 per day, for 6 months of heating).<Br>
-          <br>
+				<br>
+		<img src=DINtimer03.png class=ImageMain>
+		<div class=ImageCaption>↑ New Digital Timer installed on fuseboard. The timer has a battery backup in case of outages.</div>
+		<br>
           Since getting the timer I can already see an improvement in usage, and another bonus is my apartment is warmer.<br>
+				<br>
+		<img src=DINtimer04.png class=ImageMain>
+		<div class=ImageCaption>↑ Usage between 2AM and 4AM has increased.</div>
           <br>
           
 	<br>
