--- a/DINtimer.html
+++ b/DINtimer.html
@@ -126,7 +126,7 @@ In November 2023 I finally got a Smart Meter installed by ESB Networks. This all
           <br>
           Most of my heating comes from 3 storage heaters, 2 of which also have a manual top up heating element, Dimplex xmc718n. Despite their reputation I don't actually mind having sotrage heaters as you can warm them up during night rates and they are non polluting.<br>
           <br>
-          My main issue was the automatic timer that regulates when they come on, the Devireg 710-2. The idea behind this is the controller will detect when the night rate will start and base how long it runs on the outside temperature. Great in thoery, in practice not so much, even more so with an apartment wioth a BER rating of F.<br>
+          My main issue was the automatic timer that regulates when they come on, the Devireg 710-2. The idea behind this is the controller will detect when the night rate will start and base how long it runs on the outside temperature. Great in theory, in practice not so much, even more so with an apartment wioth a BER rating of F.<br>
           		<br>
 		<img src=DINtimer02.png class=ImageMain>
 		<div class=ImageCaption>↑ Devireg 710-2, commonly used in apartments.</div>
