--- a/DINtimer.html
+++ b/DINtimer.html
@@ -114,7 +114,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
          <div class=headline>Replacing a DIN timer on fuseboard</div>
 	      <div class=datestamp>08-Feb-24</div>
         <div class=content><br>
-In November 2023 I finally got a Smart Meter installed by ESB Networks. This allowed me to available of a special night rate between the hours of 2 and 4 AM from my electricity provider, Electric Ireland.<br>
+In November 2023 I finally got a Smart Meter installed by ESB Networks. This allowed me to avail of a special night rate between the hours of 2 and 4 AM from my electricity provider, Electric Ireland.<br>
 		<br>
 		<img src=DINtimer01.png class=ImageMain>
 		<div class=ImageCaption>↑ Smart Meter to about 30 minutes to install.</div>
@@ -124,7 +124,7 @@ In November 2023 I finally got a Smart Meter installed by ESB Networks. This all
           - Night rate (23:00 to 09:00) 0.205 /kWh<br>
           - Special night rate (02:00 to 04:00) 0.210 /kWh<br>
           <br>
-          Most of my heating comes from 3 storage heaters, 2 of which also have a manual top up heating element, Dimplex xmc718n. Despite their reputation I don't actually mind having sotrage heaters as you can warm them up during night rates and they are non polluting.<br>
+          Most of my heating comes from 3 storage heaters, 2 of which also have a manual top up heating element, Dimplex xmc718n. Despite their reputation I don't actually mind having storage heaters as you can warm them up during night rates and they are non polluting.<br>
           <br>
           My main issue was the automatic timer that regulates when they come on, the Devireg 710-2. The idea behind this is the controller will detect when the night rate will start and base how long it runs on the outside temperature. Great in theory, in practice not so much. Even more so with an apartment with a BER rating of F.<br>
           		<br>
