--- a/DINtimer.html
+++ b/DINtimer.html
@@ -145,7 +145,7 @@ In November 2023 I finally got a Smart Meter installed by ESB Networks. This all
 		<br>
 		2 hours of heating between 2 and 4 AM comes in at about €1.60 versus about €2.90 on the standard night rate. There will be nights where the storage heaters needs more than 2 hours heating, but there will still be a saving of €1.30 a night.<br>
 		By running the storage heaters longer at night I should also use less of the manual heater during the day, so that should also save money in the long term.<br>
-		Electric Ireland will be dropping their prices in 2024, but it's likely the day rate will still be around 30c by the end of the year. Estimed savings would be about €250 a year.<br>
+		Electric Ireland will be dropping their prices in 2024, but it's likely the day rate will still be around 30c by the end of the year. Estimated savings would be about €250 a year.<br>
           <br>
           
 	<br>
