--- a/DINtimer.html
+++ b/DINtimer.html
@@ -117,7 +117,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 In November 2023 I finally got a Smart Meter installed by ESB Networks. This allowed me to avail of a special night rate between the hours of 2 and 4 AM from my electricity provider, Electric Ireland.<br>
 		<br>
 		<img src=DINtimer01.png class=ImageMain>
-		<div class=ImageCaption>↑ Smart Meter to about 30 minutes to install.</div>
+		<div class=ImageCaption>↑ Smart Meter took about 30 minutes to install.</div>
         <br>
         With a madman in the East the eletricity rates for the winter were at record levels:<br>
           - Day rate (09:00 to 23:00) 0.416 /kWh<br>
