--- a/broadband.html
+++ b/broadband.html
@@ -123,44 +123,24 @@ a.two:hover {color: #447EAE; text-decoration: none;}
     After a chance discussion with a colleague I heard that Three Mobile had a 5G broaband package going for €39 a month. I was a little sceptical on wireless broadband but it turned out I wasn't that far from the nearest 5G mast.<br>
           I went for an 'expert' installation package so it would be mounted at the top of my apartment but decided to use it from my living room while I waited for the installer. To my surprise it worked straight away with the only downside being that the ping went from 15ms to 102ms.<br>
           Teams calls need a ping time of around 100ms or less and so far I've not had any audio quality issues.<br>
+		<Br>
+		<img src=broadband02.png class=ImageMain>
+		<div class=ImageCaption>↑ Ookla speed test for Virgin Media. I beleive I was on the 300Mb package, but it's really hard to tell with Virgin billing.</div>
+		<br>
+		<img src=broadband03.png class=ImageMain>
+		<div class=ImageCaption>↑ Ookla speed test for Three Broadband 5G, not mounted outside yet. Note the higher ping times. Package speed is up to 500Mb*.</div>
+		<br>
           <br>
           Will the ping time go down when the modem is installed higher and outside? I'm not sure, but I will find out shortly.<br>
-          <br>
+         <br>
           The modem itself looks ok, has a much needed feature of being able to turn off the activity lights and is powered by POE. Possibly I could have just gone with the indoor self install version, but I didn't really know what type of connection I was going to get.<br>
-          <br>
+      <br>
+		<img src=broadband01.png class=ImageMain>
+		<div class=ImageCaption>↑ Outdoor Modem - <a href='https://ztedevices.com/en-uk/mc7010/'>ZTE MC7010</a></div>
+		<br>
           Cost wise it makes a big difference, you get 3 months free and the price goes up by 3% every year, much less than Virgin Media do with their price increases. The saving for this year will be about €400 and about €300 in the following years.<br>
           <br>
-		<br>
-		<img src=DINtimer01.png class=ImageMain>
-		<div class=ImageCaption>↑ Smart Meter took about 30 minutes to install.</div>
-        <br>
-        With a <a href='https://en.wikipedia.org/wiki/Russian_invasion_of_Ukraine'>madman</a> in the East the eletricity rates for the winter were at record levels:<br>
-          - Day rate (09:00 to 23:00) 0.416 /kWh<br>
-          - Night rate (23:00 to 09:00) 0.205 /kWh<br>
-          - Special night rate (02:00 to 04:00) 0.210 /kWh<br>
-          <br>
-          Most of my heating comes from 3 storage heaters, 2 of which also have a manual top up heating element, Dimplex xmc718n. Despite their reputation I don't actually mind having storage heaters as you can warm them up during night rates and they are non polluting.<br>
-          <br>
-          My main issue was the automatic timer that regulates when they come on, the Devireg 710-2. The idea behind this is the controller will detect when the night rate will start and base how long it runs on the outside temperature. Great in theory, in practice not so much. Even more so with an apartment with a BER rating of F.<br>
-          		<br>
-		<img src=DINtimer02.png class=ImageMain>
-		<div class=ImageCaption>↑ Devireg 710-2, commonly used in apartments.</div>
-		<br>
-          My apartment is not well insulated so I always have to use the manual element in the evenings at the top rate. It also has no way to detect when the special night rate is, so I was paying almost twice as much as I could have been and with little control over long the heaters would run.<br>
-          <br>
-          Having weighed up the costs, I decided it made sense to replace the Devireg with a digital timer and get a qualified electrician to install it. Total cost was €152 (€136 for electrician, €16 for timer), so it should pay for itself in under 1 year (probable saving of €1 per day, for 6 months of heating).<Br>
-				<br>
-		<img src=DINtimer03.png class=ImageMain>
-		<div class=ImageCaption>↑ New Digital Timer installed on fuseboard. The timer has a battery backup in case of outages.</div>
-		<br>
-          Since getting the timer I can already see an improvement in usage, and another bonus is my apartment is warmer.<br>
-				<br>
-		<img src=DINtimer04.png class=ImageMain>
-		<div class=ImageCaption>↑ Usage between 2AM and 4AM has increased.</div>
-		<br>
-		2 hours of heating between 2 and 4 AM comes in at about €1.60 versus about €2.90 on the standard night rate. There will be nights where the storage heaters needs more than 2 hours heating, but there will still be a saving of €1.30 a night.<br>
-		By running the storage heaters longer at night I should also use less of the manual heater during the day, so that should also save money in the long term.<br>
-		Electric Ireland will be dropping their prices in 2024, but it's likely the day rate will still be around 30c by the end of the year. Estimated savings would be about €250 a year.<br>
+		
           <br>
           
 	<br>
