--- a/broadband.html
+++ b/broadband.html
@@ -127,7 +127,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 		Teams calls need a ping time of around 100ms or less and so far I've not had any audio quality issues.<br>
 		<Br>
 		<img src=broadband02.png class=ImageMain>
-		<div class=ImageCaption>↑ Ookla speed test for Virgin Media. I beleive I was on the 300Mb package, but it's really hard to tell with Virgin billing.</div>
+		<div class=ImageCaption>↑ Ookla speed test for Virgin Media. I believe I was on the 300Mb package, but it's really hard to tell with Virgin billing.</div>
 		<br>
 		<img src=broadband03.png class=ImageMain>
 		<div class=ImageCaption>↑ Ookla speed test for Three Broadband 5G, not mounted outside yet. Note the higher ping times. Package speed is up to 500Mb*.</div>
