--- a/freesat.html
+++ b/freesat.html
@@ -129,15 +129,15 @@ a.two:hover {color: #447EAE; text-decoration: none;}
           <b>Pros</b><br>
           - UTV is back, so this incudes some matches that don't get shown on Virgin Media One.<br>
           - Things like the Tour de France on ITV4 are no longer blacked out. Their coverage is a lot better than TG4's offering.<br>
-          - The box can easily record programs to a USB key.
+          - The box can easily record programs to a USB key.<br>
           - The receiver box is tiny so uses a lot less space than the Virgin Hozion box, also less noise and electricity used.<br>
           <br>
           <b>Cons</b><br>
           - EPG was better on the Horizon box.<br>
           - Virgin Media One does not broadcast in HD on Saorview because they won't pay the extra cost. Only really an issue for some Ireland rugby games.<br>
-          - Better EPG on the web as well.
+          - Better EPG on the web as well.<br>
           <br>
-          So how much did I save? It's hard to say because Virgin Media give bundle deals, but probably it was about €30 a month for the TV package alone. So this means the arial and satellite pays for itself in only 10 months.<br>
+          So how much did I save? It's hard to say because Virgin Media give bundle deals, but probably it was about €30 a month for the TV package alone. This means the arial and satellite pays for itself in only 10 months.<br>
 		
           <br>
           
