--- a/runbooks.html
+++ b/runbooks.html
@@ -75,6 +75,10 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 		<a href='' class="dropbtn">Articles</a>
   <div class="dropdown-content" style='line-height: 1.6;'>
 		  <b>2024</b><br>
+     <a href="freesat.html" class=two>Installing FreeSat and Saorview</a><br>
+    <a href="broadband.html" class=two>Changing broadband provider</a><br>
+    <a href="DINtimer.html" class=two>Replacing a DIN timer on fuseboard</a><br>
+    <a href="desktopNotifications.html" class=two>Outlook Desktop Notifications stop working</a><br>
     <a href="outlookFolders.html" class=two>Outlook folders keep moving sort order</a><br>
     <a href="runbooks.html" class=two>Teams report uploading to SharePoint with Runbooks</a><br>
 	  <a href="teamsApplication.html" class=two>Teams PowerShell module can't run CS cmd as App</a><br>
