--- a/desktopNotifications.html
+++ b/desktopNotifications.html
@@ -81,6 +81,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
     <a href="desktopNotifications.html" class=two>Outlook Desktop Notifications stop working</a><br>
     <a href="outlookFolders.html" class=two>Outlook folders keep moving sort order</a><br>
     <a href="runbooks.html" class=two>Teams report uploading to SharePoint with Runbooks</a><br>
+	  <a href="teamsApplication.html" class=two>Teams PowerShell module can't run CS cmd as App</a><br>
 	  <b>2023</b><br>
   <a href="mapSharedMailbox.html" class=two>Cannot map new Shared Mailboxes in O365</a><br>
 	<a href="exchangeCertRenew.html" class=two>Renewing an Exchange 2016 certificate</a><br>
