--- a/freesat.html
+++ b/freesat.html
@@ -116,7 +116,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
          <div class=headline>Replacing Virgin Media with FreeSat and Saorview</div>
 	      <div class=datestamp>08-Feb-24</div>
         <div class=content><br>
-  Last summer I decided I was paying too much for a TV and Broaband package from Virgin Media. Another 10% price increase meant I was due to pay €88 a month.<br>
+  Last summer I decided I was paying too much for a TV and Broadband package from Virgin Media. Another 10% price increase meant I was due to pay €88 a month.<br>
           <br>
           I couldn't change broadband provider at this time but I could ditch the TV package and get a combination of an arial for Saorview (Irish DTT) and the UK's FreeSat via a dish.<br>
           <br>
