--- a/freesat.html
+++ b/freesat.html
@@ -137,6 +137,9 @@ a.two:hover {color: #447EAE; text-decoration: none;}
           - Virgin Media One does not broadcast in HD on Saorview because they won't pay the extra cost. Only really an issue for some Ireland rugby games.<br>
           - Better EPG on the web as well.<br>
           <br>
+		<img src=freesat01.png class=ImageMain>
+		<div class=ImageCaption>↑ Supplied receiver Amico Mini Combo 3.</div>
+		<br>
           So how much did I save? It's hard to say because Virgin Media give bundle deals, but probably it was about €30 a month for the TV package alone. This means the arial and satellite pays for itself in only 10 months.<br>
 		
           <br>
