--- a/freesat.html
+++ b/freesat.html
@@ -120,7 +120,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
           <br>
           I couldn't change broadband provider at this time but I could ditch the TV package and get a combination of an arial for Saorview (Irish DTT) and the UK's FreeSat via a dish.<br>
           <br>
-          Based on reviews I went with Satellite.ie as the installer, for a one off payment of €278 you get the arial and dish installed and a combo receiver box.<br>
+          Based on reviews I went with <a href='https://www.satellite.ie/'>Satellite.ie</a> as the installer, for a one off payment of €278 you get the arial and dish installed and a combo receiver box.<br>
           <br>
           My apartment has a flat roof that I have exclusive use of, so there were no issues over access. Before I moved in someone had a wireless broadband arial setup, so the installer just reused this pole and cable, which made for a neat job with no drilling.<br>
           <br>
