--- a/freesat.html
+++ b/freesat.html
@@ -82,8 +82,13 @@ a.two:hover {color: #447EAE; text-decoration: none;}
     <a href="outlookFolders.html" class=two>Outlook folders keep moving sort order</a><br>
     <a href="runbooks.html" class=two>Teams report uploading to SharePoint with Runbooks</a><br>
 	  <a href="teamsApplication.html" class=two>Teams PowerShell module can't run CS cmd as App</a><br>
-	  <b>2023</b><br>
-  <a href="mapSharedMailbox.html" class=two>Cannot map new Shared Mailboxes in O365</a><br>
+	  
+	  <details>
+
+    <summary><b>2023</b><br></summary>
+
+   <b>2023</b><br>
+<a href="mapSharedMailbox.html" class=two>Cannot map new Shared Mailboxes in O365</a><br>
 	<a href="exchangeCertRenew.html" class=two>Renewing an Exchange 2016 certificate</a><br>
 	<a href="compliancePowershell.html" class=two>Connect to Compliance PowerShell behind a Proxy</a><br>
 	<a href="sensitivityLabelError.html" class=two>Sensitivity Label not shown in Outlook Client</a><br>
@@ -104,6 +109,8 @@ a.two:hover {color: #447EAE; text-decoration: none;}
         <a href="graphMail.html" class=two>Using Graph to send emails with inline images</a><br>
         <a href="charts.html" class=two>Visualizing Graph data with Google Charts</a><br>
         <a href="alwaysOn.html" class=two>Keeping a log of NetScaler AlwaysON connections</a><br>
+</details>
+  
   </div>
 </div>	
 		
