--- a/freesat.html
+++ b/freesat.html
@@ -143,7 +143,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
           - Better EPG on the web as well.<br>
           <br>
 		<img src=freesat01.png class=ImageMain>
-		<div class=ImageCaption>↑ Supplied receiver <a href='https://www.amikostb.com/product/505-MiniCombo3'>Amiko Mini Combo 3.</a>a></div>
+		<div class=ImageCaption>↑ Supplied receiver <a href='https://www.amikostb.com/product/505-MiniCombo3'>Amiko Mini Combo 3.</a></div>
 		<br>
           So how much did I save? It's hard to say because Virgin Media give bundle deals, but probably it was about €30 a month for the TV package alone. This means the arial and satellite pays for itself in only 10 months.<br>
 		
