--- a/freesat.html
+++ b/freesat.html
@@ -135,7 +135,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
           - UTV is back, so this incudes some matches that don't get shown on Virgin Media One.<br>
           - Things like the Tour de France on ITV4 are no longer blacked out. Their coverage is a lot better than TG4's offering.<br>
           - The box can easily record programs to a USB key.<br>
-          - The receiver box is tiny so uses a lot less space than the Virgin Hozion box, also less noise and electricity used.<br>
+          - The receiver box is tiny so uses a lot less space than the Virgin Horizon box, also less noise and electricity used.<br>
           <br>
           <b>Cons</b><br>
           - EPG was better on the Horizon box.<br>
