--- a/broadband.html
+++ b/broadband.html
@@ -124,18 +124,16 @@ a.two:hover {color: #447EAE; text-decoration: none;}
     <br>
     After a chance discussion with a colleague I heard that Three Mobile had a 5G broaband package going for €39 a month. I was a little sceptical on wireless broadband but it turned out I wasn't that far from the nearest 5G mast.<br>
          <br>
-		I went for an 'expert' installation package so it would be mounted at the top of my apartment but decided to use it from my living room while I waited for the installer. To my surprise it worked straight away with the only downside being that the ping went from 15ms to 102ms.<br>
-        <br>
-		Teams calls need a ping time of around 100ms or less and so far I've not had any audio quality issues.<br>
+		I went for an 'expert' installation package so it would be mounted externally where I live. However as a test I plugged in the modem inside and found the speeds were as good as before, with download speeds of about 94Mbps, the same as with my previous broadband.<br>
+		<br>
+		While 94Mbps is fine for me it was still a bit strange the speed came in exatly the same as before, I eventually tracked this down to the cable used between the modem and my wireless router. I had used an old cable based purely on the colour so it could be easily distinguished, but it was still a surprise to find a Cat5 cable.<br>
+		<br>
+		When the installer arrived a few days later he checked for the local base station, I has assumed the closest was to the East but it turned out there was a new mast to the West only 140 meters away, though not quite line of site. Rather than install the modem externally we instead moved it to a different part of the room.<br>
 		<Br>
-		<img src=broadband02.png class=ImageMain>
-		<div class=ImageCaption>↑ Ookla speed test for Virgin Media. I believe I was on the 300Mb package, but it's really hard to tell with Virgin billing.</div>
-		<br>
-		<img src=broadband03.png class=ImageMain>
-		<div class=ImageCaption>↑ Ookla speed test for Three Broadband 5G, not mounted outside yet. Note the higher ping times. Package speed is up to 500Mb*.</div>
-		<br>
+		<img src=broadband04.png class=ImageMain>
+		<div class=ImageCaption>↑ Ping time of 48ms and download speed over 350Mbps. Teams calls need a ping time of around 100ms or less and so far I've not had any audio quality issues.<br></div>
           <br>
-          Will the ping time go down when the modem is installed higher and outside? I'm not sure, but I will find out shortly.<br>
+
          <br>
           The modem itself looks ok, has a much needed feature of being able to turn off the activity lights and is powered by POE. Possibly I could have just gone with the indoor self install version, but I didn't really know what type of connection I was going to get.<br>
       <br>
