--- a/broadband.html
+++ b/broadband.html
@@ -120,7 +120,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
   <br>
   As I work from home a good internet connection was important, as well as good latency. DSL wasn't particularly fast or cheap and the phone line would need to be moved to make it useable, so I didn't go with that option.<br>
  <br>
-		To get the costs down I removed the TV package and instead used a mix of satellite (Freesat) and arial (Saorview), which brought the monthly cost down to €64 a month for broadband only.<br>
+		To get the costs down I <a href='https://smwk.github.io/freesat.html'>removed the TV package</a> and instead used a mix of satellite (Freesat) and arial (Saorview), which brought the monthly cost down to €64 a month for broadband only.<br>
     <br>
     After a chance discussion with a colleague I heard that Three Mobile had a 5G broaband package going for €39 a month. I was a little sceptical on wireless broadband but it turned out I wasn't that far from the nearest 5G mast.<br>
          <br>
